samples/_failures_safe/1761440107_3cdfc4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b9beb0b.c: In function ‘main’:
./samples/SAFE/__tmp_8b9beb0b.c:148:21: error: expected declaration or statement at end of input
  148 |                     printf("Error: Matrices must have same dimensions for addition.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_8b9beb0b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8b9beb0b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8b9beb0b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8b9beb0b.c:148:21: error: expected declaration or statement at end of input
